Fix modal text/password input alignment with box-sizing

--- a/webapp/src/main/resources/public/css/style.css
+++ b/webapp/src/main/resources/public/css/style.css
@@ -1045,7 +1045,8 @@ input[type=password].incorrect-data {
 
 .modal-form-label input[type=text],
 .modal-form-label input[type=password] {
-    width: 92%;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 /* Signup validation styles */
